fix sitetools overlapping footnotes. closes #43

--- a/css/area_footnotes.less
+++ b/css/area_footnotes.less
@@ -51,4 +51,5 @@
 
 .insitu-footnote {
   line-height: 130%;
+  z-index: 100;
 }
